--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -105,6 +105,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:backgroundTint="@color/black"
+                    android:onClick="callForgetPassword"
                     android:text="@string/forget_password"></Button>
             </RelativeLayout>
 
@@ -114,16 +115,19 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@color/black"
+                android:onClick="letTheUserLoggedIn"
                 android:text="@string/login"
                 android:textColor="@color/white"></Button>
 
             <Button
+                android:id="@+id/btn_signup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_20sdp"
                 android:backgroundTint="@color/black"
+                android:onClick="callSignUpFromLogin"
                 android:text="@string/create_account"></Button>
         </LinearLayout>
     </LinearLayout>
