--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -162,6 +162,7 @@
             android:layout_marginTop="@dimen/_20sdp"
             android:background="@color/black"
             android:elevation="@dimen/_5sdp"
+            android:onClick="callLoginFromSignUp"
             android:text="@string/login"
             android:textColor="@color/white"
             android:transitionName="transition_login_btn"></Button>
