--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/_30sdp"
+    android:transitionName="transition_signup"
     tools:context=".Common.LoginSignup.SignUp">
 
     <LinearLayout
@@ -13,7 +14,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/btn_signup_back"
+            android:id="@+id/btn_signup1_back"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"
             android:padding="@dimen/_5sdp"
@@ -42,8 +43,10 @@
             android:orientation="vertical">
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/signup1_fullname"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
+
                 android:layout_height="wrap_content"
                 android:hint="@string/full_name"
                 android:textColorHint="@color/black"
@@ -56,9 +59,8 @@
                 app:startIconTint="@color/black">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/signup_fullname"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="61dp"
                     android:inputType="text">
 
                 </com.google.android.material.textfield.TextInputEditText>
@@ -66,6 +68,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/signup1_username"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -76,11 +79,11 @@
                 app:endIconMode="clear_text"
                 app:endIconTint="@color/black"
                 app:hintTextColor="@color/black"
+
                 app:startIconDrawable="@drawable/ic_user"
                 app:startIconTint="@color/black">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/signup_username"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="text">
@@ -90,6 +93,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/signup1_email"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -104,7 +108,6 @@
                 app:startIconTint="@color/black">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/signup_email"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="textEmailAddress">
@@ -114,6 +117,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/signup1_password"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -130,7 +134,6 @@
                 app:startIconTint="@color/black">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/signup_password"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="textPassword">
@@ -142,7 +145,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/btn_signup_next"
+            android:id="@+id/btn_signup1_next"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_20sdp"
@@ -156,13 +159,13 @@
         </Button>
 
         <Button
-            android:id="@+id/btn_signup_login"
+            android:id="@+id/btn_signup1_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_20sdp"
             android:background="@color/black"
             android:elevation="@dimen/_5sdp"
-            android:onClick="callLoginFromSignUp"
+            android:onClick="callLoginFromSignUp1"
             android:text="@string/login"
             android:textColor="@color/white"
             android:transitionName="transition_login_btn"></Button>
