--- a/app/src/main/res/layout/activity_start_up.xml
+++ b/app/src/main/res/layout/activity_start_up.xml
@@ -46,7 +46,7 @@
             android:layout_marginTop="@dimen/_5sdp">
 
             <Button
-                android:id="@+id/btn_login"
+                android:id="@+id/btn_startup_login"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/_10sdp"
@@ -59,15 +59,15 @@
             </Button>
 
             <Button
-                android:id="@+id/btn_signup"
+                android:id="@+id/btn_startup_signup"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_weight="1"
                 android:onClick="callSignupActivity"
-                android:transitionName="transition_signup"
                 android:text="@string/sign_up"
-                android:textColor="@color/black">
+                android:textColor="@color/black"
+                android:transitionName="transition_signup">
 
             </Button>
         </LinearLayout>
