--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,6 +41,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
+                android:id="@+id/username_login"
                 android:layout_height="wrap_content"
                 android:hint="@string/enter_username"
                 app:boxStrokeColor="@color/black"
@@ -65,6 +66,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
+                android:id="@+id/password_login"
                 android:layout_height="wrap_content"
                 android:hint="@string/enter_password"
                 app:boxStrokeColor="@color/black"
