Done back-end and front end sign-up sign-in forget password

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollview_forgetpassword"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -50,39 +51,51 @@
             android:gravity="center"
             android:text="@string/forget_password_detail"
             android:textAlignment="center"
-            android:textAllCaps="true"
             android:textColor="@color/black"
-            android:textSize="@dimen/_18sdp"></TextView>
+            android:textSize="@dimen/_12sdp"></TextView>
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_40sdp"
-            android:hint="@string/enter_email"
-            android:textColorHint="@color/black"
-            app:boxBackgroundColor="@color/white"
-            app:boxStrokeColor="@color/black"
-            app:boxStrokeWidthFocused="@dimen/_2sdp"
-            app:endIconMode="clear_text"
-            app:startIconDrawable="@drawable/baseline_email_24"
-            app:startIconTint="@color/black">
+            android:layout_marginTop="@dimen/_10ssp"
+            android:orientation="vertical">
 
 
-            <com.google.android.material.textfield.TextInputEditText
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/username_forget_password"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black">
+                android:hint="@string/enter_username"
+                app:boxStrokeColor="@color/black"
+                app:boxStrokeWidthFocused="@dimen/_2sdp"
+                app:endIconMode="clear_text"
+                app:endIconTint="@color/black"
+                app:hintTextColor="@color/black"
+                app:startIconDrawable="@drawable/ic_user"
+                app:startIconTint="@color/black">
 
-            </com.google.android.material.textfield.TextInputEditText>
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="text"
+                    android:textColor="@color/black">
+
+
+                </com.google.android.material.textfield.TextInputEditText>
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </LinearLayout>
 
         <Button
+            android:id="@+id/forget_password_next_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/_20sdp"
             android:background="@color/black"
+            android:onClick="verifyUserName"
             android:text="@string/next"
             android:textColor="@color/white">
 
