--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -38,7 +38,7 @@
             android:textAlignment="center"
             android:textAllCaps="true"
             android:textColor="@color/black"
-            android:textSize="@dimen/_40sdp">
+            android:textSize="@dimen/_30sdp">
 
         </TextView>
 
@@ -58,6 +58,7 @@
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
             android:layout_width="match_parent"
+            android:id="@+id/et_reset_password"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_20sdp"
             android:hint="New Password"
@@ -78,6 +79,7 @@
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
             android:layout_width="match_parent"
+            android:id="@+id/et_confirm_reset_password"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_10sdp"
             android:hint="Confirm Password"
@@ -96,11 +98,13 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
+            android:id="@+id/btn_set_new_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_20sdp"
             android:background="@color/design_default_color_primary"
-            android:text="OK">
+            android:onClick="btnSetNewPassword"
+            android:text="Update">
 
         </Button>
     </LinearLayout>
