--- a/app/src/main/res/layout/activity_reset_password_successfully.xml
+++ b/app/src/main/res/layout/activity_reset_password_successfully.xml
@@ -43,6 +43,8 @@
         </ImageView>
 
         <Button
+            android:onClick="callLoginFromSuccess"
+            android:id="@+id/btn_login_success"
             android:layout_width="@dimen/_200sdp"
             android:layout_height="wrap_content"
             android:background="@color/black"
