Add onClick for back button

--- a/app/src/main/res/layout/activity_sign_up2.xml
+++ b/app/src/main/res/layout/activity_sign_up2.xml
@@ -13,6 +13,7 @@
         android:orientation="vertical">
 
         <ImageView
+            android:onClick="returnSignup1"
             android:id="@+id/btn_signup2_back"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"
