--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -15,6 +15,7 @@
         android:orientation="vertical">
 
         <ImageView
+            android:onClick="returnStartup"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"
             android:padding="@dimen/_5sdp"
