--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,6 +15,7 @@
         android:orientation="vertical">
 
         <ImageView
+            android:onClick="returnStartup"
             android:id="@+id/btn_logn_back"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"
