--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -14,6 +14,7 @@
         android:orientation="vertical">
 
         <ImageView
+            android:onClick="returnStartup"
             android:id="@+id/btn_signup1_back"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"
