--- a/app/src/main/res/layout/activity_verify_otp.xml
+++ b/app/src/main/res/layout/activity_verify_otp.xml
@@ -14,6 +14,7 @@
         android:padding="@dimen/_30sdp">
 
         <ImageView
+            android:onClick="returnSignup3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/_5sdp"
