Add multi languages

--- a/app/src/main/res/layout/activity_hiragana_katakana_selection.xml
+++ b/app/src/main/res/layout/activity_hiragana_katakana_selection.xml
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
-        android:text="Hiragana"
+        android:text="@string/hiragana"
         android:textSize="@dimen/_30ssp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -47,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="Katakana"
+        android:text="@string/katakana"
         android:textSize="@dimen/_30ssp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
