--- a/app/src/main/res/layout/activity_study_nhat1.xml
+++ b/app/src/main/res/layout/activity_study_nhat1.xml
@@ -10,10 +10,11 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Luyện đề"
+        android:text="@string/practice"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center"
         app:layout_constraintHorizontal_bias="0.239"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,26 +25,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="handWriting"
-        android:text="Tập viết"
+        android:text="@string/handwriting"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center"
         app:layout_constraintHorizontal_bias="0.87"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.785" />
 
     <ImageButton
-        android:onClick="btn_hiragana_katakana"
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="btn_hiragana_katakana"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.177"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.107"
+        app:layout_constraintVertical_bias="0.125"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageButton
@@ -89,13 +91,13 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:onClick="btn_hiragana_katakana"
         android:layout_height="wrap_content"
-        android:text="Bảng chữ cái"
+        android:onClick="btn_hiragana_katakana"
+        android:text="@string/kanamoji"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.169"
+        app:layout_constraintHorizontal_bias="0.225"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.354" />
@@ -104,7 +106,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Học Dekiru"
+        android:text="@string/study_dekiru"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
