--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -53,7 +53,9 @@
             android:text="@string/forget_password_detail"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="@dimen/_12sdp"></TextView>
+            android:textSize="@dimen/_12sdp">
+
+        </TextView>
 
         <LinearLayout
             android:layout_width="match_parent"
