--- a/app/src/main/res/layout/activity_start_up.xml
+++ b/app/src/main/res/layout/activity_start_up.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -36,7 +35,7 @@
             android:text="@string/app_slogan"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="@dimen/_36ssp">
+            android:textSize="@dimen/_28ssp">
 
         </TextView>
 
@@ -62,8 +61,7 @@
                 android:id="@+id/btn_startup_signup"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:onClick="callSignupActivity"
                 android:text="@string/sign_up"
                 android:textColor="@color/black"
@@ -80,6 +78,37 @@
             android:textColor="@color/black">
 
         </Button>
-    </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="btn_vietnamese"
+                android:textSize="@dimen/_10sdp"
+                android:layout_marginRight="@dimen/_5sdp"
+                android:layout_weight="1"
+                android:text="@string/vietnamese" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="btn_english"
+                android:textSize="@dimen/_10sdp"
+                android:layout_weight="1"
+                android:text="@string/english" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:onClick="btn_japanese"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/_10sdp"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:layout_weight="1"
+                android:text="@string/japanese" />
+        </LinearLayout>
+    </LinearLayout>
 </ScrollView>
