--- a/app/src/main/res/layout/activity_hiragana_katakana_selection.xml
+++ b/app/src/main/res/layout/activity_hiragana_katakana_selection.xml
@@ -31,6 +31,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
+        android:onClick="chooseHiragana"
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
