--- a/app/src/main/res/layout/activity_japanese_hand_writing.xml
+++ b/app/src/main/res/layout/activity_japanese_hand_writing.xml
@@ -1,101 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".StudyScreen.JapaneseHandWritingActivity">
 
-    <LinearLayout
+    <!-- Back button and title -->
+    <RelativeLayout
+        android:id="@+id/top_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/purple_200"
+        android:padding="16dp">
+
+        <Button
+            android:id="@+id/btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:text="back"
+            android:textColor="@android:color/white" />
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_toEndOf="@id/btn_back"
+            android:text="Title"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/_16ssp" />
+
+    </RelativeLayout>
+
+    <!-- Fragment -->
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_300sdp"
+        android:layout_below="@id/top_bar" />
+
+    <ImageView
+        android:id="@+id/image_view"
+        android:layout_marginTop="@dimen/_10sdp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_below="@id/fragment_container"
+        android:layout_above="@id/linear"
+        >
 
-        app:layout_constraintTop_toTopOf="parent">
+    </ImageView>
+    <!-- Bottom buttons -->
+    <LinearLayout
+        android:id="@+id/linear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        android:padding="10dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.8">
-
-            <com.example.japanesequizappversion2.DigitalInkRecognize.DrawView
-                android:id="@+id/draw_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white">
-
-            </com.example.japanesequizappversion2.DigitalInkRecognize.DrawView>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.15">
-
-            <TextView
-                android:id="@+id/text_recognize"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/black"
-                android:fontFamily="sans-serif-black"
-                android:gravity="center"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_25ssp">
-
-            </TextView>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/btn_left"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:background="@color/purple_200"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_weight="1"
+            android:background="@null"
+            android:text="Left"
+            android:textColor="@android:color/white" />
 
-            <Button
-                android:id="@+id/btn_recognize"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="20sp"
-                android:backgroundTint="@color/black"
-                android:fontFamily="sans-serif-medium"
-                android:text="@string/recognize"
-                android:textAllCaps="false"
-                android:textColor="#651FFF"
-                android:textSize="@dimen/_18ssp">
+        <Button
+            android:id="@+id/btn_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@null"
+            android:text="Right"
+            android:textColor="@android:color/white" />
 
-            </Button>
-
-            <Button
-                android:id="@+id/btn_clear"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/black"
-                android:fontFamily="sans-serif-medium"
-                android:text="@string/clear"
-                android:textAllCaps="false"
-                android:textColor="#651FFF"
-                android:textSize="@dimen/_18ssp">
-
-            </Button>
-
-            <Button
-                android:id="@+id/btn_next"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_20sdp"
-                android:backgroundTint="@color/black"
-                android:fontFamily="sans-serif-medium"
-                android:text="@string/next"
-                android:textAllCaps="false"
-                android:textColor="#651FFF"
-                android:textSize="@dimen/_18ssp">
-
-            </Button>
-        </LinearLayout>
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</RelativeLayout>
